--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,11 @@
 }
 body{
   background-color: #222427;
+
+}
+
+.app-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
