--- a/src/componentes/Menu/menu.css
+++ b/src/componentes/Menu/menu.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .nav{
     padding: 10px;
-    margin: 10px;
+    margin: 10px; 
 }
 
 .nav .title-nav{
@@ -34,19 +36,37 @@
     padding: 20px;
 }
 
-.input-nav{
+.input-nav {
     width: 700px;
     height: 45px;
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+    text-align: center;
+    color: white;
     border-radius: 20px;
-    border:1px solid #b5d0e727;
-    outline: transparent;
-    background: transparent;
-    font-size: 16px;
+    border: none;
+    box-shadow: 0px 0px 3px 3px #282a2e;
+    background-color: transparent;
+
+    outline: none;
+    overflow:hidden;
+    white-space: nowrap;
 }
 .input-nav::placeholder{
     text-align: center;
+    color: rgba(255, 255, 255, 0.418);
+    font-size: 16px;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
 }
-
+.input-nav:focus::placeholder{
+    transform: translateY(70px);
+    transition: .4s;
+}
+.input-nav:not(:focus)::placeholder{
+    transform:translateX(0px);
+    transition: .5s;
+}
 .button-input_nav button {
     padding: 12px;
     margin: 20px;
@@ -57,10 +77,37 @@
 
     font-size: 16px;
     font-weight: 600;
-    color: #222427;
-    background-color: #D9D9D9;
+    color: #D9D9D9;
+    background-color: #0e80dd;
 }
 
 .button-input_nav button:hover{
-    background-color: #adcde7;
+    background-color: #d9d9d9;
+    color: #0e80dd;
+}
+/*--Resultado pesquisado--*/
+
+.nav-results {
+    color: #D9D9D9;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: "Inter", sans-serif;
+    padding: 10px;
+    margin: 10px;
+}
+.nav-results img {
+    background-color: #282a2e;
+    margin-left: 10px;
+}
+.results-name{
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+}
+.results-genre {
+    padding: 12px;
+    margin: 10px;
+    text-align: center;
 }
