finalização do css em nos componentes que eram nescessários.

--- a/src/componentes/Input/campotexto.css
+++ b/src/componentes/Input/campotexto.css
@@ -12,11 +12,11 @@
     width: 500px;
     height: 45px;
     border-radius: 20px;
-    background-color:#c5c5c5 ;
+    background-color:#8C8C8C;
     border: none;
     text-align: center;
-    color: #000;
-    font-size: 14px;
+    color: #363801;
+    font-size: 16px;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
     outline: none;
