--- a/src/componentes/Card/card.css
+++ b/src/componentes/Card/card.css
@@ -1,7 +1,7 @@
 
 .colaborador{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     padding: 10px;
     margin: 13px;
