--- a/src/componentes/Cards/cards.css
+++ b/src/componentes/Cards/cards.css
@@ -1,11 +1,32 @@
-.card{
+.card {
+    display: grid;
+    justify-content: center;
     padding: 12px;
     margin: 12px;
     font-size: 24px;
     color: #d9d9d9;
 }
 
-.card h4, h5 {
+.card h4,
+h5 {
     font-family: 'Courier New', Courier, monospace;
     padding: 12px;
+}
+
+.button-delete {
+    position: absolute;
+    bottom: -14.5px;
+    left: 28.7rem;
+    border: none;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: rgba(170, 56, 56, 0.637);
+    backdrop-filter: blur(10px);
+    font-size: 20px;
+}
+
+.formulario button:hover {
+    background-color: #d9d9d9;
+    color: #0e80dd;
 }
