--- a/src/componentes/Formulario/formulario.css
+++ b/src/componentes/Formulario/formulario.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .formulario {
-    background: #a3bbc4;
-    background: linear-gradient(180deg, rgb(108, 113, 116) 0%, rgb(83, 92, 94) 49%, rgb(36, 42, 43) 100%);
+    background-color: rgba(48, 47, 47, 0.445);
+    backdrop-filter: blur(5px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,10 +13,16 @@
     border-radius: 20px;
     height: 400px;
 }
+
 .formulario h2{
     color: #d9d9d9;
     padding: 12px;
     outline:none;
+}
+.formulario .h2_span {
+    color: #898C23;
+    font-weight: 700;
+    font-size: 26px;
 }
 .formulario button {
     margin-top: 12px;
@@ -25,7 +31,7 @@
     border-radius: 12px;
     border: none;
     background-color: #0e80dd;
-    color:#d9d9d9;
+    color:#d3d2d2;
     cursor: pointer;
     position: relative;
     left: 11.1rem;
