--- a/src/componentes/Menu/menu.css
+++ b/src/componentes/Menu/menu.css
@@ -4,15 +4,18 @@
     padding: 10px;
     margin: 10px; 
 }
-
-.nav .title-nav{
+.title-nav h1{
+    color: white;
     font-size: 30px;
-    color: #D9D9D9;
-    margin: 10px, 0, 10px, 0px;
+}
+.title-nav span {
+    font-size: 30px;
+    color: #898C23;
 }
 .nav .nav-list {
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 20px;
     font-weight: 200px;
 }
@@ -45,7 +48,7 @@
     color: white;
     border-radius: 20px;
     border: none;
-    box-shadow: 0px 0px 3px 3px #282a2e;
+    box-shadow: 0px 0px 3px 3px #1c1e20;
     background-color: transparent;
 
     outline: none;
@@ -54,7 +57,7 @@
 }
 .input-nav::placeholder{
     text-align: center;
-    color: rgba(255, 255, 255, 0.418);
+    color: #3E4001;
     font-size: 16px;
     font-family: "Inter", sans-serif;
     font-weight: 600;
